01-10-2004 Qball ,Qball@qballcow.nl>
	* src/preferences.c:	Added configuration option to show the
	tray_icon tooltip.
	* glade/playlist.glade:	Fixed keybinding collition.
	* src/tray_icon.c:	Fixed placing tray icon.
	* src/tray_icon.c:	If text in tooltip is changed, a  new position
	is caculated aswell.
	* src/playlist2.c:	Pressing wipe while search entry empty scrolls
	to the playing song.

30-09-2004 Qball <Qball@qballcow.nl>
	* src/tray_icon.c:	Shows a tooltip on song change above/below the
	tray icon.
23-09-2004 Qball <Qball@qballcow.nl>
	* src/player.c:		Added key-press event handler.
	* src/player.c:		Added winamp key bindings (up/down ->volumn,
	left/right -> seek)

20-09-2004 Qball <Qball@qballcow.nl>
	* glade/playlist.glade:	Added a clear button, with c as keybinding
	* glade/gmpc.glade:	corrected tooltip.
	* src/playlist2.c:	Added signal handle that removes the tooltip
	when scrolling the window.
	* src/playlist2.c:	Added a clear string function.

07-09-2004 Qball <Qball@qballcow.nl>
	* glade/playlist.glade:	Removed find button, this is allready done
	automagically
	* glade/gmpc.glade:	Changed random keybinding to 's'/'ctrl-s' like
	in winamp.

26-08-2004 Qball <Qball@qballcow.nl>
	* src/song-browser.c:	Fixed bug that caused songs withouth an album
	not always showing up in id3 browser.

25-08-2004 Qball <Qball@qballcow.nl>
	* src/mm-keys.[c|h]:	Added primary support for mm-keys.

23-08-2004 Qball <Qball@qballcow.nl>
	* src/mpdinteraction.c:	Title is set when connecting. (To "GMPC - Connected")
	* src/tray-icon.c:			Tooltip doesnt use monospace font anymore.
	* src/tray-icon.c:			Tooltip resizes when needed (code somehow dissapeared)
	* src/popup.c:			Made sure the tooltip has a nice line around it.

20-08-2004 Qball <Qball@qballcow.nl>
	* src/tray-icon.c:	Tooltip resizes when needed
	* src/tray-icon.c:	Tooltip uses monospace font

19-08-2004 Qball <Qball@qballcow.nl>
	* src/main.h:		Added option field for rounded corner